--- a/src/app/(dashboard)/user/User.module.css
+++ b/src/app/(dashboard)/user/User.module.css
@@ -67,14 +67,13 @@
 
 @media(max-width: 576px) {
     .userInfo {
-        max-width: 90%;
+        width: 82%;
     }
 
     .userInfo p {
+        width: 100%;
         display: flex;
-        flex-direction: column;
         gap: 10px;
-        font-size: 1.1em;
         position: relative;
     }
 }
