--- a/src/app/(dashboard)/apps/[app]/App.module.css
+++ b/src/app/(dashboard)/apps/[app]/App.module.css
@@ -6,9 +6,101 @@
 }
 
 .appParagraph {
-    margin-top: 100px;
-    text-align: center;
     font-weight: 300;
     font-size: 1.2em;
+    text-align: center;
     margin-bottom: 30px;
+}
+
+.appFeatures {
+    list-style-type: none;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding-left: 30px;
+}
+
+.appFeature {
+    font-size: 1.1em;
+    position: relative;
+}
+
+.appFeature::before {
+    content: '⭐';
+    position: absolute;
+    left: -35px;
+    top: -4px;
+}
+
+.testimonialsTitle {
+    font-weight: 400;
+    font-size: 1.2em;
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+
+.testimonialsList {
+    list-style-type: none;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding-left: 30px;
+}
+
+.testimonialItem {
+    background-color: var(--main-light-blue);
+    padding: 5px 10px;
+    border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    font-size: 1.1em;
+    position: relative;
+    -webkit-border-radius: 15px;
+    -moz-border-radius: 15px;
+    -ms-border-radius: 15px;
+    -o-border-radius: 15px;
+}
+
+.testimonialItem::before {
+    content: '👀';
+    position: absolute;
+    left: -35px;
+    top: 5px;
+}
+
+.testimonialFeedback {
+    padding: 0;
+    margin: 0;
+}
+
+.testimonialName {
+    font-style: italic;
+    background-color: var(--main-white);
+    align-self: self-start;
+    padding: 5px 10px;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+}
+
+@media(max-width: 576px) {
+
+    .testimonialItem {
+        border-radius: 10px;
+        -webkit-border-radius: 10px;
+        -moz-border-radius: 10px;
+        -ms-border-radius: 10px;
+        -o-border-radius: 10px;
+    }
+
+    .testimonialName {
+        border-radius: 5px;
+        -webkit-border-radius: 5px;
+        -moz-border-radius: 5px;
+        -ms-border-radius: 5px;
+        -o-border-radius: 5px;
+    }
 }
