--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -74,6 +74,7 @@ main .main-content {
   -o-border-radius: 20px;
   padding: 20px;
   margin-top: 12px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
 
 .notFound-container {
